# Casacore.jl

./: .gitignore  CMakeLists.txt  CasaCore.jl  LICENSE  Project.toml  README.md  build_tarballs.jl
.github/workflows/: dev-nobuild.yml  dev.yml  main.yml  stable.yml
Casacore/: .gitignore  LICENSE  Project.toml  README.md
Casacore/src/: Casacore.jl  LibCasacore.jl  Measures.jl  Tables.jl  libcasacore.jl  tables.jl
Casacore/src/LibCasacore/: Enums.jl
Casacore/test/: runtests.jl
casacorecxx/: CMakeLists.txt
casacorecxx/src/: arrays.cpp  casacorecxx.cpp  enums.cpp  tables.cpp  utilities.cpp
cmake/: FindCasacore.cmake
jlcasacore/: CMakeLists.txt
jlcasacore/src/: tables.cpp
src/: LibCasacore.jl  Measures.jl  Tables.jl  record.cpp  tables.cpp
src/LibCasacore/: Enums.jl
src/Measures/: Baselines.jl  Directions.jl  Dopplers.jl  EarthMagnetics.jl  Epochs.jl  Frequencies.jl  Positions.jl  RadialVelocities.jl  UVWs.jl
test/: runtests.jl
